Chapter 13 — Listing 13.1: ImperativeVsDeclarative.java Demonstrates: Imperative iterator-based removal vs declarative removeIf